@@ -1,3 +1,8 @@
+2006-10-27 Braden McDaniel  <braden@endoframe.com>
+
+	* openvrml.spec.in: Removed obsolete references to openvrml.xpt
+	and openvrml.idl by the mozilla-plugin package.
+
 2006-10-25 Braden McDaniel  <braden@endoframe.com>
 
 	* doc/index.doc: Documentation improvements.
